--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-/.idea
-/.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
+vendor/
+node_modules/
+.idea/
+
+public/uploads/*
+bootstrap/cache/
+.env.*.php
+.env.php
 .env
+
+# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
+.rocketeer/
